cmake_minimum_required(VERSION 3.14)
project(cdemo)

set(CMAKE_CXX_STANDARD 14)

add_executable(cdemo main.cpp)
add_executable(maopaopaixu "eight suanfa/maopaopaixu.cpp")
add_executable(533doublearrayapplication cyuyan/533doublearrayapplication.cpp)
add_executable(611functiondefine cyuyan/611functiondefine.cpp)
add_executable(711pointerdefine cyuyan/711pointerdefine.cpp)
add_executable(711nullandwildpointer cyuyan/711nullandwildpointer.cpp)
add_executable(721Pointerconstant cyuyan/721Pointerconstant.cpp)
add_executable(731pointerfuntion cyuyan/731pointerfuntion.cpp)
add_executable(811struct cyuyan/811struct.cpp)
add_executable(811structpointer cyuyan/811structpointer.cpp)
add_executable(821structfuntion cyuyan/821structfuntion.cpp)
add_executable(831conststructfuntion cyuyan/831conststructfuntion.cpp)
add_executable(841egstruct cyuyan/841egstruct.cpp)
add_executable(851egstructtwo cyuyan/851egstructtwo.cpp)
add_executable(cyuyandemo cyuyandemo.cpp)
add_executable(LNode LNode.cpp)
add_executable(001 practice/001.cpp)
add_executable(gogogo gogogo.cpp)
add_executable(printf c_practice/printf.c)
add_executable(god_int_t c_practice/god_int_t.cpp)