cmake_minimum_required(VERSION 3.14)
project(cdemo)

set(CMAKE_CXX_STANDARD 14)

add_executable(cdemo main.cpp)
add_executable(maopaopaixu "eight suanfa/maopaopaixu.cpp")
add_executable(533doublearrayapplication cyuyan/533doublearrayapplication.cpp)
add_executable(611functiondefine cyuyan/611functiondefine.cpp)
add_executable(711pointerdefine cyuyan/711pointerdefine.cpp)
add_executable(711nullandwildpointer cyuyan/711nullandwildpointer.cpp)
add_executable(721Pointerconstant cyuyan/721Pointerconstant.cpp)
add_executable(731pointerfuntion cyuyan/731pointerfuntion.cpp)
add_executable(811struct cyuyan/811struct.cpp)
add_executable(811structpointer cyuyan/811structpointer.cpp)
add_executable(821structfuntion cyuyan/821structfuntion.cpp)
add_executable(831conststructfuntion cyuyan/831conststructfuntion.cpp)
add_executable(841egstruct cyuyan/841egstruct.cpp)
add_executable(851egstructtwo cyuyan/851egstructtwo.cpp)
add_executable(cyuyandemo cyuyandemo.cpp)
add_executable(LNode LNode.cpp)
add_executable(001 practice/001.cpp)
add_executable(gogogo gogogo.cpp)
add_executable(printf 01-c_practice/printf.c)
add_executable(god_int_t 01-c_practice/god_int_t.cpp)
add_executable(doublepointer 01-c_practice/doublepointer.c)
add_executable(xing_int_question 01-c_practice/xing_int_question.cpp)
add_executable(i++and++i 01-c_practice/i++and++i.c)
add_executable(struct_go 01-c_practice/struct_go.c)
add_executable(day0322-fac 01-c_practice/day0322-fac.cpp)
add_executable(day0322-reversePrint 01-c_practice/day0322-reversePrint.c)
add_executable(day0322-testArray 01-c_practice/day0322-testArray.c)
add_executable(space-complexity "02-complexity/space-complexity.c")
add_executable(01-VisitList 03-linear_list/01-VisitList.c)
add_executable(02-StaticArray 03-linear_list/02-StaticArray.c)
add_executable(03-DynamicArray 03-linear_list/03-DynamicArray.c)